# spirits

./: CMakeLists.txt  makefile  readme.md
examples/: allocation.c
inc/spirits/: all.h  allocation.h  common.h  core.h  memory.h  print.h
src/spirits/: spirits.c
